--- a/src/googleMapSample.html
+++ b/src/googleMapSample.html
@@ -29,7 +29,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdxkkAQIbLHnNnLCSfY-U8tbBiH06tc0o&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"
     async defer></script>
   </body>
 </html>
